<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CSEN704</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_id">1517195581889242</string>

    <!-- Profile Fragment -->
    <string name="courses_list_header">Subscribed Courses:- </string>
    <string name="share">Share to Facebook</string>
    <string name="turn_notifications">Turn Notification On/Off</string>

    <!-- Register Fragment -->
    <string name="signup">Signup</string>
    <string name="title_activity_profile">PROFILE</string>
    <string name="user_name">Your name</string>
    <string name="user_mail">Your email</string>
    <string name="user_birthday">Your birthday</string>
    <string name="password">Your password</string>

    <!-- create anouncement Fragment -->
    <string-array name="type_array">
        <item>Deadline</item>
        <item>General</item>
    </string-array>

    <string name="deadline">Deadline</string>
    <string name="announcement_body">Body</string>

    <!-- Login Fragment -->
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_login">Login</string>
    <string name="title_activity_facebook">FacebookActivity</string>
    <string name="title_activity_question">View Question</string>
    <string name="megaphone_desc">Announcement</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_settings">Settings</string>
    <string name="register">Register</string>

    <!-- Create x -->
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>

    <!-- Course -->
    <string name="course_name">Course Name</string>
    <string name="course_code">Course Code</string>
    <string name="course_description">Course Description</string>
    <string name="title_activity_create_course">Create Course</string>

    <!-- Question -->
    <string name="add_question">Post</string>
    <string name="question_hint">Ask a Question</string>

    <!-- Answer -->
    <string name="add_answer">Post</string>
    <string name="answer_hint">Add an Answer</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_create_announcement">CreateAnnouncementActivity</string>
    <string name="title_activity_create_reminder">CreateReminderActivity</string>

    <!-- Reminder -->
    <string name="create_reminder">Add reminder</string>

    <!-- Browse Course -->
    <string name="title_activity_browse_courses">Browse Courses</string>
    <string name="subscribe_course">Subscribe</string>
    <string name="title_activity_friends">Friends</string>
    <string name="title_activity_uesrs">UesrsActivity</string>

</resources>
