<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.csen704.MainActivity" >
	
   <item
        android:id="@+id/action_all_users"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="All Users"/>
  
    <item
        android:id="@+id/action_followers"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="Followers"/>
  
    <item
        android:id="@+id/action_browse_courses"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/title_activity_browse_courses"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/action_logout"/>

</menu>
