<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    	<LinearLayout 
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_centerInParent="true"
    	    android:orientation="vertical" >

    	    <EditText
	            android:id="@+id/username"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/login_username"
	            android:inputType="text" />

	        <EditText
	            android:id="@+id/password"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/login_password"
	            android:inputType="textPassword" />
	        
	        <LinearLayout 
	            android:orientation="horizontal"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:weightSum="2"
	            android:gravity="center">
	            
	            <Button
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center"
		            android:text="@string/login_login"
		            android:layout_weight="1" />
	        </LinearLayout>
	        
    	</LinearLayout>
	
</RelativeLayout>
